# Equimic

./: CMakeLists.txt  README.md  package.json
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build-container.yml  publish.yml
addon/: CMakeLists.txt  addon.cpp
include/equicord/: logger.hpp  patchbay.hpp
lib/: options.js
private/: message.hpp  patchbay.impl.hpp
server/: CMakeLists.txt  main.cpp
src/: logger.cpp  patchbay.cpp  patchbay.impl.cpp
tests/node/: api.test.js
